--- a/menu.html
+++ b/menu.html
@@ -2,6 +2,8 @@
 Project Name: JavaJam Web Site (HW5)
 Author: Julia Signorelli
 Date Last Modified: 27 March 2019
+
+Don't put line breaks after list elements (dd's)
 -->
 <!DOCTYPE html>
 <html lang="en">
